<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Crust"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


                <RadioGroup
                    android:id="@+id/crust"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/crispy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crispy"
                        android:onClick="selectCrust"/>

                    <RadioButton
                        android:id="@+id/thick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thick"
                        android:onClick="selectCrust"/>

                    <RadioButton
                        android:id="@+id/soggy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soggy"
                        android:onClick="selectCrust"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Topping"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                <CheckBox
                    android:id="@+id/anchives"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anchovies"
                    android:onClick="selectTopping"/>

                <CheckBox
                    android:id="@+id/pineapple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pineapple"
                    android:onClick="selectTopping"/>

                <CheckBox
                    android:id="@+id/garlic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/garlic"
                    android:onClick="selectTopping"/>

                <CheckBox
                    android:id="@+id/okra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/okra"
                    android:onClick="selectTopping"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toGoOrNo"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


            <RadioGroup
                android:id="@+id/toGoOrNO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/atRestaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atRestaurant"
                    android:onClick="toGoOrNo"/>

                <RadioButton
                    android:id="@+id/pickup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup"
                    android:onClick="toGoOrNo"/>

                <RadioButton
                    android:id="@+id/deliver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deliver"
                    android:onClick="toGoOrNo"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/size"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="2in"
                    android:layout_height="wrap_content"
                    android:max="29"
                    android:progress="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length" />

            </LinearLayout>




        </LinearLayout>

        <TextView
            android:id="@+id/final_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Price"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>
    
    
    
    
    

</android.support.constraint.ConstraintLayout>